<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/board_game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textSize="56sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="120dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@drawable/ic_call_black_24dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/imageView"/>

        <RelativeLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/imageView"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/cellPhone"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="72dp"
                android:text="@string/cell_phone"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cellPhone"
                android:layout_marginLeft="72dp"
                android:text="@string/mobile"
                android:gravity="center_vertical"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@drawable/ic_email_black_24dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/phone"/>

        <RelativeLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/phone"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/emailAddress"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="72dp"
                android:text="@string/email"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailAddress"
                android:layout_marginLeft="72dp"
                android:text="@string/personal"
                android:gravity="center_vertical"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@drawable/ic_place_black_24dp"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/email"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/email"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/address"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="72dp"
                android:text="@string/address"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginLeft="72dp"
                android:text="@string/address_name"
                android:gravity="center_vertical"/>

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>

